Fix portfolio collapse (wasn't smooth), refactor

--- a/css/agency.css
+++ b/css/agency.css
@@ -877,13 +877,12 @@ body {
   background-image: url(../img/products-bg.jpg);
 }
 .appType {
-  min-height: 20px;
   /*border: 1px solid #e3e3e3;*/
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
   text-align: center;
 }
-#app-type-label {
+#portfolio .app-type-label {
   /*color: #FFC600!important;*/
   color: black;
   margin-top: 3em;
@@ -899,16 +898,13 @@ body {
   background-repeat: no-repeat;
   border: none;
   cursor: pointer;
-  overflow: hidden;
   outline: 0;
   border-radius: 100%;
-  width: 1em;
-  height: 1em;
+  width: 56px;
+  height: 56px;
   background-color: #f7f7f7;
   color: #a7a7a7;
   position: relative;
-  z-index: 0;
-  font-size: 4em;
   margin: 0.5em;
 }
 .appTypeButton:hover {
@@ -924,11 +920,8 @@ body {
   font-weight: 400;
   color: white;
 }
-#app-icon {
-  position: absolute;
-  font-size: 0.5em;
-  top: 0.5em;
-  z-index: -1;
+.appTypeButton i {
+  font-size: 2em;
 }
 .newsAppContainer img{
   border-radius: 30%;
